[gd_scene load_steps=14 format=3 uid="uid://dp1nd5nj87qxd"]

[ext_resource type="PackedScene" uid="uid://c8kekywtbsxfv" path="res://rooms/template_room.tscn" id="1_igt5n"]
[ext_resource type="Script" path="res://scripts/cutscene/tutorial.gd" id="2_m04yg"]
[ext_resource type="Texture2D" uid="uid://dxtk33c33hk21" path="res://images/Ricket.png" id="3_s8otp"]
[ext_resource type="Texture2D" uid="uid://c8edulhog34bl" path="res://images/decor/bed.png" id="4_8vtwe"]
[ext_resource type="Texture2D" uid="uid://bppkcb8xmfvct" path="res://images/decor/chair.png" id="5_0m2px"]
[ext_resource type="Texture2D" uid="uid://cvs3doy4ypp66" path="res://images/decor/table.png" id="6_06bi7"]
[ext_resource type="PackedScene" uid="uid://d2gaj3ryohl5r" path="res://partial/objects/door.tscn" id="6_x3trq"]
[ext_resource type="PackedScene" uid="uid://32lojrt5n25o" path="res://partial/objects/laptop.tscn" id="8_tp1lh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ax2ja"]
size = Vector2(110, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5or3y"]
size = Vector2(72, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3i3il"]
size = Vector2(36, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiepr"]
size = Vector2(114, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alije"]
size = Vector2(110, 8)

[node name="Tutorial" instance=ExtResource("1_igt5n")]
script = ExtResource("2_m04yg")

[node name="TileMap" parent="." index="0"]
layer_0/tile_data = PackedInt32Array(1441802, 0, 1, 1441803, 131072, 1, 1441807, 0, 1, 1441808, 131072, 1, 1507338, 0, 1, 1507339, 131072, 1, 1507343, 0, 1, 1507344, 131072, 1, 1245194, 0, 1, 1245195, 131072, 1, 1245199, 0, 1, 1245200, 131072, 1, 1310730, 0, 1, 1310731, 131072, 1, 1310735, 0, 1, 1310736, 131072, 1, 1376266, 0, 1, 1376267, 131072, 1, 1376271, 0, 1, 1376272, 131072, 1, 393234, 65536, 2, 327680, 0, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 327689, 65536, 0, 327690, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 327696, 65536, 0, 327697, 65536, 0, 327698, 65536, 0, 393216, 0, 1, 393217, 65536, 1, 393218, 65536, 1, 393219, 65536, 1, 393220, 65536, 1, 393221, 65536, 1, 393222, 65536, 1, 393223, 65536, 1, 393224, 65536, 1, 393225, 65536, 1, 393226, 65536, 1, 393227, 327680, 1, 393228, 65536, 2, 393229, 65536, 2, 393230, 65536, 2, 393231, 65536, 2, 393232, 65536, 2, 393233, 65536, 2, 327699, 65536, 0, 327700, 65536, 0, 327701, 65536, 0, 327702, 65536, 0, 327703, 65536, 0, 327704, 65536, 0, 327705, 65536, 0, 327706, 65536, 0, 327707, 65536, 0, 327708, 65536, 0, 327709, 65536, 0, 327710, 65536, 0, 327711, 65536, 0, 327712, 65536, 0, 327713, 65536, 0, 327714, 65536, 0, 327715, 65536, 0, 327716, 65536, 0, 327717, 65536, 0, 327718, 65536, 0, 327719, 131072, 0, 393235, 65536, 2, 393236, 65536, 2, 393237, 65536, 2, 393238, 65536, 2, 393239, 65536, 2, 393240, 65536, 2, 393241, 65536, 2, 393242, 65536, 2, 393243, 65536, 2, 393244, 393216, 1, 393245, 65536, 1, 393246, 65536, 1, 393247, 65536, 1, 393248, 65536, 1, 393249, 65536, 1, 393250, 65536, 1, 393251, 65536, 1, 393252, 65536, 1, 393253, 65536, 1, 393254, 65536, 1, 393255, 131072, 1, 458790, 65536, 1, 458791, 131072, 1, 524326, 65536, 1, 524327, 131072, 1, 589862, 65536, 1, 589863, 131072, 1, 655398, 65536, 1, 655399, 131072, 1, 720934, 65536, 1, 720935, 131072, 1, 786470, 65536, 1, 786471, 131072, 1, 852006, 65536, 1, 852007, 131072, 1, 917542, 65536, 1, 917543, 131072, 1, 983078, 65536, 1, 983079, 131072, 1, 1048614, 65536, 1, 1048615, 131072, 1, 983060, 65536, 0, 983061, 65536, 0, 983062, 65536, 0, 983063, 65536, 0, 983064, 65536, 0, 983065, 65536, 0, 983066, 65536, 0, 983067, 65536, 0, 983068, 393216, 2, 983069, 65536, 1, 983070, 65536, 1, 983071, 65536, 1, 983072, 65536, 1, 983073, 65536, 1, 983074, 65536, 1, 983075, 65536, 1, 983076, 65536, 1, 983077, 65536, 1, 1048597, 65536, 1, 1048598, 65536, 1, 1048599, 65536, 1, 1048600, 65536, 1, 1048601, 65536, 1, 1048602, 65536, 1, 1048603, 65536, 1, 1048604, 65536, 1, 1048605, 65536, 1, 1048606, 65536, 1, 1048607, 65536, 1, 1048608, 65536, 1, 1048609, 65536, 1, 1048610, 65536, 1, 1048611, 65536, 1, 1048612, 65536, 1, 1048613, 65536, 1, 983040, 0, 1, 983041, 65536, 1, 983042, 65536, 1, 983043, 65536, 1, 983044, 65536, 1, 983045, 65536, 1, 983046, 65536, 1, 983047, 65536, 1, 983048, 65536, 1, 983049, 65536, 1, 983050, 65536, 1, 983051, 131072, 1, 983056, 65536, 0, 983057, 65536, 0, 983058, 65536, 0, 983059, 65536, 0, 1048576, 0, 1, 1048577, 65536, 1, 1048578, 65536, 1, 1048579, 65536, 1, 1048580, 65536, 1, 1048581, 65536, 1, 1048582, 65536, 1, 1048583, 65536, 1, 1048584, 65536, 1, 1048585, 65536, 1, 1048586, 65536, 1, 1048587, 131072, 1, 1048592, 65536, 1, 1048593, 65536, 1, 1048594, 65536, 1, 1048595, 65536, 1, 1048596, 65536, 1, 458752, 0, 1, 458753, 65536, 1, 524288, 0, 1, 524289, 65536, 1, 589824, 0, 1, 589825, 65536, 1, 655360, 0, 1, 655361, 65536, 1, 720896, 0, 1, 720897, 65536, 1, 786432, 0, 1, 786433, 65536, 1, 851968, 0, 1, 851969, 65536, 1, 917504, 0, 1, 917505, 65536, 1, 458781, 65536, 1, 524317, 65536, 1, 589853, 65536, 1, 655389, 65536, 1, 720925, 65536, 1, 786461, 65536, 1, 851997, 65536, 1, 917533, 65536, 1, 917532, 0, 1, 851996, 0, 1, 786460, 0, 1, 720924, 0, 1, 655388, 0, 1, 589852, 0, 1, 524316, 0, 1, 458780, 0, 1, 458762, 65536, 1, 524298, 65536, 1, 589834, 65536, 1, 655370, 65536, 1, 720906, 65536, 1, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 917515, 131072, 1, 851979, 131072, 1, 786443, 131072, 1, 720907, 131072, 1, 655371, 131072, 1, 589835, 131072, 1, 524299, 131072, 1, 458763, 131072, 1, 458761, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 655369, 65536, 1, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 917513, 65536, 1, 458782, 65536, 1, 524318, 65536, 1, 589854, 65536, 1, 655390, 65536, 1, 720926, 65536, 1, 786462, 65536, 1, 851998, 65536, 1, 917534, 65536, 1, 1114112, 0, 1, 1114113, 65536, 1, 1114114, 65536, 1, 1114115, 65536, 1, 1114116, 65536, 1, 1114117, 65536, 1, 1114118, 65536, 1, 1114119, 65536, 1, 1114120, 65536, 1, 1114121, 65536, 1, 1114122, 65536, 1, 1114123, 131072, 1, 1114128, 65536, 1, 1114129, 65536, 1, 1114130, 65536, 1, 1114131, 65536, 1, 1114132, 65536, 1, 1114133, 65536, 1, 1114134, 65536, 1, 1114135, 65536, 1, 1114136, 65536, 1, 1114137, 65536, 1, 1114138, 65536, 1, 1114139, 65536, 1, 1179675, 65536, 2, 1179676, 65536, 2, 1179677, 65536, 2, 1179678, 65536, 2, 1179679, 65536, 2, 1179680, 65536, 2, 1179681, 65536, 2, 1179682, 65536, 2, 1179683, 65536, 2, 1114147, 65536, 1, 1114148, 65536, 1, 1114149, 65536, 1, 1114150, 65536, 1, 1114151, 131072, 1, 1114140, 65536, 1, 1114141, 65536, 1, 1114142, 65536, 1, 1114143, 65536, 1, 1114144, 65536, 1, 1114145, 65536, 1, 1114146, 65536, 1, 1179687, 131072, 2, 1179686, 65536, 2, 1179685, 65536, 2, 1179684, 65536, 2, 1179649, 65536, 2, 1179650, 65536, 2, 1179651, 65536, 2, 1179652, 65536, 2, 1179653, 65536, 2, 1179654, 65536, 2, 1179655, 65536, 2, 1179656, 65536, 2, 1179657, 65536, 2, 1179658, 393216, 1, 1179659, 131072, 1, 1179664, 327680, 1, 1179665, 65536, 2, 1179666, 65536, 2, 1179667, 65536, 2, 1179668, 65536, 2, 1179669, 65536, 2, 1179670, 65536, 2, 1179671, 65536, 2, 1179672, 65536, 2, 1179673, 65536, 2, 1179674, 65536, 2, 1179648, 0, 2, 458754, 65536, 1, 458755, 65536, 1, 458756, 65536, 1, 458757, 65536, 1, 458758, 65536, 1, 458759, 65536, 1, 458760, 65536, 1, 524290, 65536, 1, 524291, 65536, 1, 524292, 65536, 1, 524293, 65536, 1, 524294, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 589826, 65536, 1, 589827, 65536, 1, 589828, 65536, 1, 589829, 65536, 1, 589830, 65536, 1, 589831, 65536, 1, 589832, 65536, 1, 655362, 65536, 1, 655363, 65536, 1, 655364, 65536, 1, 655365, 65536, 1, 655366, 65536, 1, 655367, 65536, 1, 655368, 65536, 1, 720898, 65536, 1, 720899, 65536, 1, 720900, 65536, 1, 720901, 65536, 1, 720902, 65536, 1, 720903, 65536, 1, 720904, 65536, 1, 786434, 65536, 1, 786435, 65536, 1, 786436, 65536, 1, 786437, 65536, 1, 786438, 65536, 1, 786439, 65536, 1, 786440, 65536, 1, 851970, 65536, 1, 851971, 65536, 1, 851972, 65536, 1, 851973, 65536, 1, 851974, 65536, 1, 851975, 65536, 1, 851976, 65536, 1, 917506, 65536, 1, 917507, 65536, 1, 917508, 65536, 1, 917509, 65536, 1, 917510, 65536, 1, 917511, 65536, 1, 917512, 65536, 1, 458783, 65536, 1, 458784, 65536, 1, 458785, 65536, 1, 458786, 65536, 1, 458787, 65536, 1, 458788, 65536, 1, 458789, 65536, 1, 524319, 65536, 1, 524320, 65536, 1, 524321, 65536, 1, 524322, 65536, 1, 524323, 65536, 1, 524324, 65536, 1, 524325, 65536, 1, 589855, 65536, 1, 589856, 65536, 1, 589857, 65536, 1, 589858, 65536, 1, 589859, 65536, 1, 589860, 65536, 1, 589861, 65536, 1, 655391, 65536, 1, 655392, 65536, 1, 655393, 65536, 1, 655394, 65536, 1, 655395, 65536, 1, 655396, 65536, 1, 655397, 65536, 1, 720927, 65536, 1, 720928, 65536, 1, 720929, 65536, 1, 720930, 65536, 1, 720931, 65536, 1, 720932, 65536, 1, 720933, 65536, 1, 786463, 65536, 1, 786464, 65536, 1, 786465, 65536, 1, 786466, 65536, 1, 786467, 65536, 1, 786468, 65536, 1, 786469, 65536, 1, 851999, 65536, 1, 852000, 65536, 1, 852001, 65536, 1, 852002, 65536, 1, 852003, 65536, 1, 852004, 65536, 1, 852005, 65536, 1, 917535, 65536, 1, 917536, 65536, 1, 917537, 65536, 1, 917538, 65536, 1, 917539, 65536, 1, 917540, 65536, 1, 917541, 65536, 1, 983055, 0, 0, 1048591, 0, 1, 1114127, 0, 1, 1179663, 0, 1, 1572874, 0, 1, 1572875, 131072, 1, 1638410, 0, 1, 1638411, 131072, 1, 1703946, 0, 1, 1703947, 131072, 1, 1769482, 0, 1, 1769483, 131072, 1, 1835018, 0, 1, 1835019, 131072, 1, 1900554, 0, 1, 1900555, 131072, 1, 1966090, 0, 1, 1966091, 131072, 1, 2031626, 0, 1, 2031627, 131072, 1, 1572879, 0, 1, 1572880, 131072, 1, 1638415, 0, 1, 1638416, 131072, 1, 1703951, 0, 1, 1703952, 131072, 1, 1769487, 0, 1, 1769488, 131072, 1, 1835023, 0, 1, 1835024, 131072, 1, 1900559, 0, 1, 1900560, 131072, 1, 1966095, 0, 1, 1966096, 131072, 1, 2031631, 0, 1, 2031632, 131072, 1, 2097162, 0, 1, 2097163, 131072, 1, 2162698, 0, 1, 2162699, 131072, 1, 2228234, 0, 1, 2228235, 131072, 1, 2293770, 0, 1, 2293771, 131072, 1, 2359306, 0, 1, 2359307, 131072, 1, 2424842, 0, 1, 2424843, 131072, 1, 2490378, 0, 1, 2490379, 131072, 1, 2555914, 0, 1, 2555915, 131072, 1, 2621450, 0, 1, 2621451, 131072, 1, 2686986, 0, 1, 2686987, 131072, 1, 2752522, 0, 1, 2752523, 131072, 1, 2818058, 0, 1, 2818059, 131072, 1, 2883594, 0, 1, 2883595, 131072, 1, 2949130, 0, 1, 2949131, 131072, 1, 3014666, 0, 1, 3014667, 131072, 1, 3080202, 0, 1, 3080203, 131072, 1, 3145738, 0, 1, 3145739, 131072, 1, 3211274, 0, 1, 3211275, 131072, 1, 3276810, 0, 1, 3276811, 131072, 1, 3342346, 0, 1, 3342347, 327680, 2, 2097167, 0, 1, 2097168, 131072, 1, 2162703, 0, 1, 2162704, 131072, 1, 2228239, 0, 1, 2228240, 131072, 1, 2293775, 0, 1, 2293776, 131072, 1, 2359311, 0, 1, 2359312, 131072, 1, 2424847, 0, 1, 2424848, 131072, 1, 2490383, 0, 1, 2490384, 131072, 1, 2555919, 0, 1, 2555920, 131072, 1, 2621455, 0, 1, 2621456, 131072, 1, 2686991, 0, 1, 2686992, 131072, 1, 2752527, 0, 1, 2752528, 131072, 1, 2818063, 0, 1, 2818064, 131072, 1, 2883599, 0, 1, 2883600, 131072, 1, 2949135, 0, 1, 2949136, 131072, 1, 3014671, 0, 1, 3014672, 131072, 1, 3080207, 0, 1, 3080208, 131072, 1, 3145743, 0, 1, 3145744, 131072, 1, 3211279, 0, 1, 3211280, 131072, 1, 3276815, 0, 1, 3276816, 131072, 1, 3342351, 393216, 2, 3342352, 131072, 1, 3407882, 0, 2, 3407883, 65536, 2, 3407884, 65536, 2, 3407885, 65536, 2, 3407886, 65536, 2, 3407887, 65536, 2, 3342348, 65536, 0, 3342349, 65536, 0, 3342350, 65536, 0, 3407888, 131072, 2)
layer_1/enabled = false
layer_1/tile_data = PackedInt32Array(983052, 65536, 0, 983053, 65536, 0, 983054, 65536, 0, 983055, 65536, 0, 1048587, 65536, 1, 1048588, 65536, 1, 1048589, 65536, 1, 1048590, 65536, 1, 1048591, 65536, 1, 1114127, 65536, 1, 1179663, 65536, 1, 1179662, 65536, 1, 1179661, 65536, 1, 1179660, 65536, 1, 1179659, 65536, 1, 1114123, 65536, 1, 1114124, 65536, 1, 1114125, 65536, 1, 1114126, 65536, 1, 983051, 327680, 2)
layer_2/tile_data = PackedInt32Array(458764, 196610, 3, 458765, 65538, 2, 458766, 65538, 2, 458767, 65538, 2, 458768, 65538, 2, 458769, 65538, 2, 458770, 65538, 2, 458771, 65538, 2, 458772, 65538, 2, 458773, 65538, 2, 458774, 65538, 2, 458775, 65538, 2, 458776, 65538, 2, 458777, 65538, 2, 458778, 65538, 2, 458779, 65538, 2, 524300, 131074, 2, 589836, 131074, 2, 655372, 131074, 2, 720908, 131074, 2, 786444, 131074, 2, 851980, 131074, 2, 917516, 131074, 2, 983052, 131074, 2, 1048588, 131074, 2, 1114124, 131074, 2, 1179660, 131074, 2, 1245196, 131074, 2, 1310732, 131074, 2, 1376268, 131074, 2)

[node name="Camera2D" parent="." index="2"]
zoom = Vector2(2, 2)

[node name="Furniture" type="Node2D" parent="." index="3"]
z_index = -10

[node name="Bed" type="Sprite2D" parent="Furniture" index="0"]
position = Vector2(562, 461)
texture = ExtResource("4_8vtwe")

[node name="Chair" type="Sprite2D" parent="Furniture" index="1"]
position = Vector2(773, 455)
texture = ExtResource("5_0m2px")

[node name="Table" type="Sprite2D" parent="Furniture" index="2"]
position = Vector2(842, 460)
texture = ExtResource("6_06bi7")

[node name="Door" parent="Furniture" index="3" instance=ExtResource("6_x3trq")]
position = Vector2(432, 480)

[node name="Collisions" type="StaticBody2D" parent="Furniture" index="4"]
collision_layer = 9
collision_mask = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Collisions" index="0"]
position = Vector2(562, 464)
shape = SubResource("RectangleShape2D_ax2ja")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Furniture/Collisions" index="1"]
position = Vector2(842, 444)
shape = SubResource("RectangleShape2D_5or3y")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Furniture/Collisions" index="2"]
position = Vector2(773, 458.5)
shape = SubResource("RectangleShape2D_3i3il")
one_way_collision = true

[node name="PlayerStart" type="Sprite2D" parent="." index="4"]
position = Vector2(791, 440)
texture = ExtResource("3_s8otp")
hframes = 7

[node name="FalseFloor" type="StaticBody2D" parent="." index="5"]
position = Vector2(431, 493)
collision_layer = 9
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FalseFloor" index="0"]
shape = SubResource("RectangleShape2D_wiepr")

[node name="Laptop" parent="." index="6" instance=ExtResource("8_tp1lh")]
position = Vector2(841, 412)

[node name="ShotgunPickup" type="Area2D" parent="." index="7"]
position = Vector2(562, 476)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotgunPickup" index="0"]
shape = SubResource("RectangleShape2D_alije")

[node name="FallDetector" type="Area2D" parent="." index="8"]
position = Vector2(430, 487)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallDetector" index="0"]
shape = SubResource("RectangleShape2D_alije")
